Codegen for addition and subtraction, switch to 64bit

--- a/compiler.cabal
+++ b/compiler.cabal
@@ -103,6 +103,7 @@ test-suite compiler-tests
   main-is:          Main.hs
   other-modules:
     Compiler.CodegenTest
+    Compiler.ParserTest
     TestUtils
 
   hs-source-dirs:   test
