--- a/compiler.cabal
+++ b/compiler.cabal
@@ -116,6 +116,7 @@ test-suite compiler-tests
   other-modules:
     Compiler.CodegenTest
     Compiler.ParserTest
+    Compiler.RenamerTest
     TestUtils
 
   hs-source-dirs:   test
